# chat-app

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile
migrations/2023-06-20-071339_dummy_data/: up.sql
src/: db.rs  main.rs  models.rs  routes.rs  server.rs  session.rs
